Profile image added / Fotter created / Deck section on high started

--- a/src/App.css
+++ b/src/App.css
@@ -355,6 +355,8 @@ template {
   --dodger-blue: #329df1;
   --dark-indigo: #09143a;
   --pastel-purple: #cdadff;
+  --dodger-green-light: #D3E7ED;
+  --steel: #838C94;
 }
 
 body {
